# trie

./: Cargo.toml  index.html
src/: app.rs  colors.rs  lib.rs  main.rs
src/components/: header.rs
src/views/: about.rs  home.rs  not_found.rs
