[package]
name = "trie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.8", features = ["csr", "nightly"] }
leptos_router = { version = "0.4.8", features = ["csr"] }
styled = "0.1.41"
stylist = "0.12.1"
